--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,11 @@
     <!-- Usando uma tabela para organizar o layout -->
     <table>
         <tr>
+            <td>
+                <!-- Miniatura do frame -->
+                <h2>Frame anterior</h2>
+                <img id="miniatura" src="/latest_frame" alt="Miniatura do Frame" style="width: 200px; border: 3px solid #f44336; margin-top: 10px;">
+            </td>
             <!-- Coluna para o stream de vídeo -->
             <td>
                 <img src="{{ url_for('stream') }}" alt="Stream de Vídeo">
@@ -79,6 +84,7 @@
                     <h2>Informações do Frame</h2>
                     <div id="temp_info">Nada encontrado...</div>
                 </div>
+                <button onclick="powerOff()">Desligar Dispositivo</button>
             </td>
         </tr>
     </table>
@@ -111,6 +117,14 @@
         // Atualiza a cada 2 segundos
         setInterval(atualizarTemp, 350); //350
 
+        // Atualiza a miniatura do frame a cada 500ms
+        setInterval(() => {
+            const miniatura = document.getElementById('miniatura');
+            // Adiciona um timestamp para evitar cache
+            miniatura.src = `/latest_frame?timestamp=` + new Date().getTime();
+        }, 2000);
+
+
         // Função de parar o stream
         function stopStream() {
             fetch('/stop', { method: 'POST' })
@@ -120,6 +134,18 @@
                 })
                 .catch(err => {
                     document.getElementById('msg').textContent = 'Erro ao parar.';
+                });
+        }
+
+        // Função de parar o stream
+        function poweroff() {
+            fetch('/powerOff', { method: 'POST' })
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('msg').textContent = data.message;
+                })
+                .catch(err => {
+                    document.getElementById('msg').textContent = 'Erro ao desligar.';
                 });
         }
         
